# anaconsole-pygame

./: README.md  pyproject.toml
anaconsole/: __init__.py  dev_console.py  dev_overlay.py  dev_overlay_element.py
anaconsole/assets/: __init__.py
anaconsole/elements/: __init__.py  autocomplete.py  base_element.py  button.py  checkbox.py  color_picker.py  dev_console.py  input_box.py  slider.py  surface_inspector.py  variable_monitor.py  window.py
examples/: headless_example.py  minimal_example.py
